--- a/index.html
+++ b/index.html
@@ -70,13 +70,11 @@
     </div>
   </form>
 
-  <p id="mensaje"></p>
-
   <script>
-    const URL_DESTINO = "https://script.google.com/macros/s/AKfycbxupjPBAwD7SO9QdC0eZB5Z_uLMUbTk9PcibtMSPI_NHrkYd5gKkEwPTnn_5Cczk8k77Q/exec"; // Sustituye esto por tu URL real
-    const LAT_EVENTO = 36.3979021; // Coordenadas estimadas
-    const LNG_EVENTO = -6.245197;
-    const RADIO_PERMITIDO = 500; 
+    const URL_DESTINO = "TU_URL_SCRIPT_WEB_APP"; // Sustituye esto por tu URL real
+    const LAT_EVENTO = 36.6031; // Latitud del evento
+    const LNG_EVENTO = -6.2362; // Longitud del evento
+    const RADIO_PERMITIDO = 500; // Rango en metros
 
     function enviarFormulario(tipo) {
       navigator.geolocation.getCurrentPosition(pos => {
@@ -84,6 +82,10 @@
         const lng = pos.coords.longitude;
 
         const distancia = calcularDistancia(lat, lng, LAT_EVENTO, LNG_EVENTO);
+
+        alert("Tu ubicación actual:\nLat: " + lat + "\nLng: " + lng +
+              "\n\nDistancia al evento: " + distancia.toFixed(2) + " metros");
+
         if (distancia > RADIO_PERMITIDO) {
           alert("Estás fuera del rango permitido para registrar tu jornada.");
           return;
@@ -104,14 +106,14 @@
         })
         .then(res => res.text())
         .then(msg => {
-          document.getElementById("mensaje").innerText = msg;
+          alert("Enviado correctamente");
           document.getElementById("formulario").reset();
         })
         .catch(err => {
-          document.getElementById("mensaje").innerText = "Error al enviar: " + err;
+          alert("Error al enviar: " + err);
         });
       }, () => {
-        document.getElementById("mensaje").innerText = "No se pudo obtener la ubicación.";
+        alert("No se pudo obtener la ubicación.");
       });
     }
 
