--- a/index.html
+++ b/index.html
@@ -1,133 +1,199 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Registro de Jornada Onix</title>
   <style>
-    body {
-      font-family: sans-serif;
-      max-width: 500px;
-      margin: 30px auto;
+    * {
+      box-sizing: border-box;
+    }
+    html, body {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+      background-color: #f9f9f9;
+      color: #333;
+    }
+    .container {
+      min-height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
       padding: 20px;
-      background: #f9f9f9;
-      border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    }
+    .form-box {
+      background: white;
+      padding: 25px;
+      width: 100%;
+      max-width: 400px;
+      border-radius: 16px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
     }
     label {
-      font-weight: bold;
-      display: block;
+      font-weight: 600;
       margin-top: 15px;
+      display: block;
+      font-size: 1rem;
     }
     input, select, button {
       width: 100%;
-      padding: 10px;
+      padding: 14px;
+      font-size: 1rem;
       margin-top: 5px;
-      border-radius: 5px;
+      border-radius: 8px;
       border: 1px solid #ccc;
-      box-sizing: border-box;
+    }
+    button {
+      background-color: #007bff;
+      color: white;
+      font-weight: bold;
+      border: none;
+      margin-top: 20px;
+      cursor: pointer;
     }
     .btn-group {
       display: flex;
-      justify-content: space-between;
+      flex-direction: column;
+      gap: 10px;
       margin-top: 20px;
     }
     .inicio {
-      background-color: #4CAF50;
-      color: white;
+      background-color: #28a745;
     }
     .fin {
-      background-color: #f44336;
-      color: white;
+      background-color: #dc3545;
+    }
+    @media (max-width: 600px) {
+      .container {
+        padding: 0;
+        display: block;
+      }
+      .form-box {
+        width: 100vw;
+        min-height: 100vh;
+        border-radius: 0;
+        box-shadow: none;
+        padding: 40px 20px;
+      }
     }
   </style>
 </head>
 <body>
-  <h2>Jornada Onix</h2>
-  <form id="formulario">
-    <label for="nombre">Nombre</label>
-    <input type="text" id="nombre" name="nombre" required>
-
-    <label for="apellidos">Apellidos</label>
-    <input type="text" id="apellidos" name="apellidos" required>
-
-    <label for="empleo">Empleo</label>
-    <select id="empleo" name="empleo" required>
-      <option value="">Selecciona...</option>
-      <option value="Auxiliar">Auxiliar</option>
-      <option value="Vigilante de seguridad">Vigilante de seguridad</option>
-    </select>
-
-    <label for="evento">Evento</label>
-    <select id="evento" name="evento" required>
-      <option value="">Selecciona...</option>
-      <option value="Prueba">Prueba</option>
-    </select>
-
-    <div class="btn-group">
-      <button type="button" class="inicio" onclick="enviarFormulario('Inicio')">Inicio de jornada</button>
-      <button type="button" class="fin" onclick="enviarFormulario('Fin')">Fin de jornada</button>
+  <div class="container">
+    <div class="form-box">
+      <h2>Registro de Jornada</h2>
+      <form id="login-form">
+        <label for="usuario">Usuario</label>
+        <input type="text" id="usuario" required>
+        <label for="pin">PIN</label>
+        <input type="password" id="pin" required>
+        <button type="submit">Acceder</button>
+      </form>
+      <form id="fichaje-form" style="display:none">
+        <label for="evento">Evento</label>
+        <select id="evento" required><option value="">Cargando...</option></select>
+        <div class="btn-group">
+          <button type="button" class="inicio" onclick="enviar('Inicio')">Inicio</button>
+          <button type="button" class="fin" onclick="enviar('Fin')">Fin</button>
+        </div>
+      </form>
     </div>
-  </form>
-
+  </div>
   <script>
-    const URL_DESTINO = "https://script.google.com/macros/s/AKfycbxupjPBAwD7SO9QdC0eZB5Z_uLMUbTk9PcibtMSPI_NHrkYd5gKkEwPTnn_5Cczk8k77Q/exec"; // Sustituye esto por tu URL real
-    const LAT_EVENTO = 36.6031; // Latitud del evento
-    const LNG_EVENTO = -6.2362; // Longitud del evento
-    const RADIO_PERMITIDO = 2000; // Aumentado a 2000 metros
+    const URL_SCRIPT = 'https://script.google.com/macros/s/AKfycbzFFhWqtl6lJKCP9DFkYjMoWfaRCj6PU4fvMo8dW18E3SDUoZJET3TM_QqBLOCZ2nNKew/exec'; // Pega tu URL de Apps Script aquí
 
-    function enviarFormulario(tipo) {
+    let usuarioInfo = null;
+
+    document.getElementById('login-form').addEventListener('submit', function(e) {
+      e.preventDefault();
+      const usuario = document.getElementById('usuario').value;
+      const pin = document.getElementById('pin').value;
+
+      fetch(URL_SCRIPT, {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify({ action: 'login', usuario, pin })
+      })
+      .then(res => res.json())
+      .then(data => {
+        if (!data) return alert('Usuario o PIN incorrectos');
+        usuarioInfo = data;
+        document.getElementById('login-form').style.display = 'none';
+        document.getElementById('fichaje-form').style.display = 'block';
+        cargarEventos();
+      })
+      .catch(() => alert('Error al conectar con el servidor'));
+    });
+
+    function cargarEventos() {
+      fetch(URL_SCRIPT, {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify({ action: 'eventos' })
+      })
+      .then(res => res.json())
+      .then(eventos => {
+        const select = document.getElementById('evento');
+        select.innerHTML = '<option value="">Selecciona...</option>';
+        eventos.forEach(ev => {
+          const opt = document.createElement('option');
+          opt.value = ev;
+          opt.textContent = ev;
+          select.appendChild(opt);
+        });
+      });
+    }
+
+    function enviar(tipo) {
+      const evento = document.getElementById('evento').value;
+      if (!evento) return alert('Selecciona un evento');
+
       navigator.geolocation.getCurrentPosition(pos => {
-        const lat = pos.coords.latitude;
-        const lng = pos.coords.longitude;
-
-        const distancia = calcularDistancia(lat, lng, LAT_EVENTO, LNG_EVENTO);
-
-        alert("Tu ubicación actual:\nLat: " + lat + "\nLng: " + lng +
-              "\n\nDistancia al evento: " + distancia.toFixed(2) + " metros" +
-              "\nRadio permitido: " + RADIO_PERMITIDO + " metros");
-
-        if (distancia <= RADIO_PERMITIDO) {
-          alert("✅ Dentro del rango, se enviará");
-        } else {
-          alert("❌ Fuera del rango, NO se enviará");
-          return;
-        }
-
-        const datos = {
-          nombre: document.getElementById("nombre").value,
-          apellidos: document.getElementById("apellidos").value,
-          empleo: document.getElementById("empleo").value,
-          evento: document.getElementById("evento").value,
-          tipo: tipo
+        const ubicacion = {
+          lat: pos.coords.latitude,
+          lng: pos.coords.longitude
         };
 
-        fetch(URL_DESTINO, {
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify(datos)
+        fetch(URL_SCRIPT, {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify({
+            action: 'ubicacion', evento
+          })
         })
-        .then(res => res.text())
-        .then(msg => {
-          alert("Enviado correctamente");
-          document.getElementById("formulario").reset();
-        })
-        .catch(err => {
-          alert("Error al enviar: " + err);
+        .then(res => res.json())
+        .then(coordenadas => {
+          const dist = calcularDistancia(ubicacion.lat, ubicacion.lng, coordenadas.lat, coordenadas.lng);
+          if (dist > 500) return alert('Fuera del rango permitido.');
+
+          fetch(URL_SCRIPT, {
+            method: 'POST',
+            headers: { 'Content-Type': 'application/json' },
+            body: JSON.stringify({
+              action: 'fichar',
+              nombre: usuarioInfo.nombre,
+              apellidos: usuarioInfo.apellidos,
+              empleo: usuarioInfo.empleo,
+              evento,
+              tipo
+            })
+          })
+          .then(res => res.text())
+          .then(msg => alert(msg === 'ok' ? '✅ Fichaje registrado' : msg));
         });
-      }, () => {
-        alert("No se pudo obtener la ubicación.");
       });
     }
 
     function calcularDistancia(lat1, lon1, lat2, lon2) {
-      const R = 6371000; // radio Tierra en metros
-      const dLat = (lat2 - lat1) * Math.PI / 180;
-      const dLon = (lon2 - lon1) * Math.PI / 180;
-      const a =
-        Math.sin(dLat / 2) * Math.sin(dLat / 2) +
-        Math.cos(lat1 * Math.PI / 180) * Math.cos(lat2 * Math.PI / 180) *
-        Math.sin(dLon / 2) * Math.sin(dLon / 2);
+      const R = 6371000;
+      const rad = Math.PI / 180;
+      const dLat = (lat2 - lat1) * rad;
+      const dLon = (lon2 - lon1) * rad;
+      const a = Math.sin(dLat / 2) ** 2 +
+                Math.cos(lat1 * rad) * Math.cos(lat2 * rad) *
+                Math.sin(dLon / 2) ** 2;
       const c = 2 * Math.atan2(Math.sqrt(a), Math.sqrt(1 - a));
       return R * c;
     }
